kubernetes/apps/default/nginx/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-cloud
  annotations:
    kubernetes.io/ingress.class: nginx-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.nginx.cloud.icylair.com`)
      kind: Rule
      services:
        - name: nginx
          port: 80
    - match: Host(`nginx.cloud.icylair.com`)
      kind: Rule
      services:
        - name: nginx
          port: 80
      middlewares:
        - name: default-headers
          namespace: default
  tls:
    secretName: cloud-icylair-com-prod
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-local
  annotations:
    kubernetes.io/ingress.class: nginx-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.nginx.local.icylair.com`)
      kind: Rule
      services:
        - name: nginx
          port: 80
    - match: Host(`nginx.local.icylair.com`)
      kind: Rule
      services:
        - name: nginx
          port: 80
      middlewares:
        - name: default-headers
          namespace: default
  tls:
    secretName: local-icecoldlair-com-prod
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: nginx-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.nginx.icylair.com`)
      kind: Rule
      services:
        - name: nginx
          port: 80
    - match: Host(`nginx.icylair.com`)
      kind: Rule
      services:
        - name: nginx
          port: 80
      middlewares:
        - name: default-headers
          namespace: default
  tls:
    secretName: icylair-com-prod
