kubernetes/apps/default/nginx/ingress2.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app nginx-homepage-cloud-nginx
  labels:
    # app.kubernetes.io/name: *app
    # app.kubernetes.io/instance: *app
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik-external
  rules:
    - host: &host nginx.cloud.icylair.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
  tls:
  - hosts:
      - nginx.cloud.icylair.com
    secretName: icylair-com-all-staging
---
